crates/parser/src/snapshots/parser__latex__tests__parse@label__label_reference_multiple.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/label/label_reference_multiple.txt
---
ROOT@0..14
  PREAMBLE@0..14
    LABEL_REFERENCE@0..14
      COMMAND_NAME@0..4 "\\ref"
      CURLY_GROUP_WORD_LIST@4..14
        L_CURLY@4..5 "{"
        KEY@5..8
          WORD@5..8 "foo"
        COMMA@8..9 ","
        WHITESPACE@9..10 " "
        KEY@10..13
          WORD@10..13 "bar"
        R_CURLY@13..14 "}"

